--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong>
-    <p>This privacy policy applies to the Be careful, puppy! (우주댕댕이) app (hereby referred to as "Application") for mobile devices that was created by Sirouniverse (hereby referred to as "Service Provider") as an Ad Supported service. This service is intended for use "AS IS".</p>
+    <p>This privacy policy applies to the 우주 댕댕이 (Be careful, puppy!) app (hereby referred to as "Application") for mobile devices that was created by Sirouniverse (hereby referred to as "Service Provider") as an Ad Supported service. This service is intended for use "AS IS".</p>
     
     <br><strong>Information Collection and Use</strong><p>The Application collects information when you download and use it. This information may include information such as</p>
         <ul><li>The time spent on the Application</li><li>The operating system you use on your mobile device</li></ul><p></p><br><p>The Application does not gather precise information about the location of your mobile device.</p>
